force-app/main/default/objects/Study_Requirement__c/Study_Requirement__c.object-meta.xml
<CustomObject>
    <description>The requirement or checklist item configuration.</description>
    <label>Study Requirement</label>
    <nameField>
        <label>Study Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>