force-app/main/default/objects/Study_Requirement__c/fields/Acceptance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Notes__c</fullName>
    <description>The notes.</description>
    <inlineHelpText>The notes.</inlineHelpText>
    <label>Acceptance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>