force-app/main/default/objects/Study_Requirement__c/fields/Create_Salesforce_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Salesforce_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For task creation. Task creation indicator.</description>
    <inlineHelpText>For task creation. Task creation indicator.</inlineHelpText>
    <label>Create Salesforce Task</label>
    <type>Checkbox</type>
</CustomField>