force-app/main/default/objects/Study_Requirement__c/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <description>For file upload.</description>
    <label>File Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>