force-app/main/default/objects/Study_Requirement__c/fields/File_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Share_Type__c</fullName>
    <description>For file upload.</description>
    <label>File Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>V</fullName>
                <default>true</default>
                <label>V</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>