force-app/main/default/objects/Study_Requirement__c/fields/File_Visibility__c.field-meta.xml
<CustomField>
    <fullName>File_Visibility__c</fullName>
    <description>For file upload.</description>
    <label>File Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllUsers</fullName>
                <default>true</default>
                <label>AllUsers</label>
            </value>
            <value>
                <fullName>InternalUsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>