force-app/main/default/objects/Study_Requirement__c/fields/Link_To_Individual_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Individual_Achievement__c</fullName>
    <label>Link To Individual Achievement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>