force-app/main/default/objects/Study_Requirement__c/fields/Object_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Relation_Field__c</fullName>
    <description>For field update. The field API of the lookup field from the target object e.g., Individual Program Application’s Contact = reduivy__Contact__c.</description>
    <label>Object Relation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>