force-app/main/default/objects/Study_Requirement__c/fields/Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Details__c</fullName>
    <inlineHelpText>Details or description for the Study Requirement.</inlineHelpText>
    <label>Requirement Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>