force-app/main/default/objects/Study_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <description>The type of required action that the user needs to perform.</description>
    <inlineHelpText>The type of required action that the user needs to perform.</inlineHelpText>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
                <default>true</default>
                <label>Action</label>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>