force-app/main/default/objects/Study_Requirement__c/fields/Requirement_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Visibility__c</fullName>
    <label>Requirement Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
                <default>true</default>
                <label>Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>