force-app/main/default/objects/Study_Requirement__c/fields/Study_Requirement_Set__c.field-meta.xml
<CustomField>
    <fullName>Study_Requirement_Set__c</fullName>
    <label>Study Requirement Set</label>
    <referenceTo>Study_Requirement_Set__c</referenceTo>
    <relationshipLabel>Study Requirements</relationshipLabel>
    <relationshipName>Study_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>