force-app/main/default/objects/Study_Requirement__c/fields/Task_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Id__c</fullName>
    <description>For task creation.</description>
    <label>Task Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>